# similaripy

./: .gitignore  .travis.yml  404.html  CMakeLists.txt  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py  tox.ini
.claude/: CLAUDE.md
.claude/commands/: benchmark.md  review.md  test.md
.claude/hooks/: pre-commit.md
.github/workflows/: deploy-docs.yml  pypi-publish.yml  python-package.yml
api/normalization/: index.html
api/similarity/: index.html
docs/: benchmarking.md  guide.md  index.md  installation.md  normalization.md  similarity.md
docs/api/: normalization.md  similarity.md
guide/: index.html  temp_guide.md
installation/: index.html
normalization/: index.html
notebooks/: movielens32m_item_item_recommender.ipynb
search/: search_index.json
similaripy/: __init__.py  normalization.py  similarity.py  utility.py
similaripy/cython_code/: __init__.py  coo_to_csr.h  normalization.pyx  progress_bar.h  s_plus.h  s_plus.pyx  s_plus_utils.pyx  utils.pyx
similarity/: index.html
test/: test_similarity.py
tests/: benchmarks.py  conftest.py  test_normalization.py  test_performance.py  test_similarity.py
tests/benchmarks/: README.md  benchmark.py  benchmarks_rnd_seed.py  compare_benchmarks.py  dataset_loaders.py  run_benchmark_wallclock.py  run_benchmarks.py
tests/profiling/: README.md  benchmark_wallclock.py  profile_cprofile.py  profile_pyspy.py
