[project]
name = "similaripy"
version = "0.2.0"
description = "Fast KNN Similarity Algorithms for Collaborative Filtering Models using sparse matrices"
authors = [{ name = "Simone Boglio", email = "bogliosimone@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
keywords = [
  "Similarity", "KNN", "Nearest Neighbors",
  "Collaborative Filtering", "Normalization", "Recommender Systems"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Cython",
  "Programming Language :: C++",
]
dependencies = [
    "numpy>=1.21",
    "scipy>=1.10.1",
    "tqdm>=4.65.2",
]

[build-system]
requires = ["scikit-build-core>=0.10", "pybind11", "cython"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
minimum-version = "build-system.requires"
sdist.reproducible = false
build-dir = "build/{wheel_tag}"
wheel.packages = ["similaripy"]
build.verbose = true
logging.level = "INFO"

[tool.scikit-build.cmake.define]
USE_OPENMP = "ON"

[project.optional-dependencies]
dev = ["pytest"]
