[project]
name = "similaripy"
version = "0.4.0"
description = "High-performance KNN similarity functions in Python, optimized for sparse matrices"
authors = [{ name = "Simone Boglio", email = "bogliosimone@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
keywords = [
  "Similarity", "KNN", "Nearest Neighbors",
  "Collaborative Filtering", "Normalization", "Recommender Systems"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Cython",
  "Programming Language :: C++",
]
dependencies = [
    "numpy>=1.21",
    "scipy>=1.10.1",
]

[project.urls]
homepage = "https://github.com/bogliosimone/similaripy"
documentation = "https://bogliosimone.github.io/similaripy/"
repository = "https://github.com/bogliosimone/similaripy.git"
changelog = "https://github.com/bogliosimone/similaripy/releases"

[build-system]
requires = ["scikit-build-core>=0.10", "pybind11", "cython"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
minimum-version = "build-system.requires"
wheel.packages = ["similaripy"]
build-dir = "build/{wheel_tag}"
build.verbose = true
logging.level = "INFO"

[tool.scikit-build.cmake.define]
USE_OPENMP = "ON"

[project.optional-dependencies]
dev = [
  "scikit-build-core",
  "cmake",
  "pybind11",
  "cython",
  "pytest",
  "build",
  "tox",
  "mkdocs",
  "mkdocs-material",
  "mkdocs-material-extensions",
  "mkdocstrings[python]"
]

bench = [
  "pandas",
  "datasets",
  "pyarrow",
  "pytest-benchmark",
]

[tool.tox]
requires = ["tox>=4.19"]
